test/trivial/diten/testIntExp3.chpl
var a = 0;
var b = -1;
var c = 2;

writeln(a ** c); // 0
writeln(c ** b); // 0
writeln(b ** c); // 1
writeln(a ** b); // halt
